# simple-agent-starter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: example.md
src/simple_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  llm.py  models.py
src/simple_agent/tools/: __init__.py  calculator.py  current_time.py  file_reader.py  registry.py
tests/: conftest.py  test_agent.py  test_calculator.py  test_config.py  test_current_time.py  test_file_reader.py  test_llm.py  test_registry.py
