[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-agent-starter"
version = "0.1.0"
description = "A small, readable multi-model CLI agent with safe local tools."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "highdynamicrange", email = "ionaive@sina.com" },
]
dependencies = [
    "litellm>=1.74,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
]

[project.scripts]
simple-agent = "simple_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/simple_agent"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001"]
